test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test "--coverage"

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/cis-scheduler-team-15/cis-scheduler-team-15/node_modules/react-bootstrap/esm/AccordionHeader.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import classNames from 'classnames';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      4 | import { Accordion, Button, Form, InputGroup, Row, Col } from "react-bootstrap";
      5 | import AllCourses from "../Data/course_list.json";
    > 6 | import AccordionHeader from "react-bootstrap/esm/AccordionHeader";
        | ^
      7 | import AccordionBody from "react-bootstrap/esm/AccordionBody";
      8 | //import university_requirements from "../Data/required_course_names.json";
      9 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/Components/course_list_view_info_edit.tsx:6:1)

---------------------------------|---------|----------|---------|---------|-------------------
File                             | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
---------------------------------|---------|----------|---------|---------|-------------------
All files                        |       0 |        0 |       0 |       0 |                   
 src                             |       0 |      100 |       0 |       0 |                   
  App.tsx                        |       0 |      100 |       0 |       0 | 11                
 src/Components                  |       0 |        0 |       0 |       0 |                   
  SemesterViewHome.tsx           |       0 |      100 |       0 |       0 | 24-80             
  SemesterViewModal.tsx          |       0 |      100 |       0 |       0 | 14-57             
  add_course.tsx                 |       0 |        0 |       0 |       0 | 19-264            
  add_semester.tsx               |       0 |        0 |       0 |       0 | 15-65             
  course_list.tsx                |       0 |        0 |       0 |       0 | 15-62             
  course_list_view.tsx           |       0 |      100 |       0 |       0 | 16                
  course_list_view_info.tsx      |       0 |        0 |       0 |       0 | 17-54             
  course_list_view_info_edit.tsx |       0 |        0 |       0 |       0 | 13-527            
  course_state.tsx               |       0 |        0 |       0 |       0 | 9-21              
  degree_plan_view.tsx           |       0 |        0 |       0 |       0 | 21-83             
  degree_plans.tsx               |       0 |        0 |       0 |       0 | 9-129             
  degree_requirement_view.tsx    |       0 |      100 |       0 |       0 | 5                 
  degree_requirements.tsx        |       0 |        0 |       0 |       0 | 7-12              
  edit_semester.tsx              |       0 |      100 |       0 |       0 | 22-95             
 src/Interfaces                  |       0 |        0 |       0 |       0 |                   
  course.ts                      |       0 |        0 |       0 |       0 |                   
  degree.ts                      |       0 |        0 |       0 |       0 |                   
  semester.ts                    |       0 |        0 |       0 |       0 |                   
---------------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        4.658 s
Ran all test suites.
